fix: poster spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -17018,7 +17018,7 @@ m-newsfeed--dropdown {
         width: 100%;
         border: 0;
         font-size: 13px;
-        padding: 22px 16px; }
+        padding: 22px 16px 0 16px; }
       .post > div form .mdl-textfield__input:focus {
         outline: none; }
     .post > div .mdl-card__actions {
